[gd_scene load_steps=5 format=3 uid="uid://c52yue6ew3uul"]

[ext_resource type="Script" path="res://Scripts/StartingEquipment.gd" id="1_wld51"]
[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_wyrel"]
[ext_resource type="PackedScene" uid="uid://ntar0ljurf53" path="res://Scenes/BackgroundBio.tscn" id="3_4xhbq"]
[ext_resource type="PackedScene" uid="uid://dovpmp4f4ubog" path="res://Scenes/animated_button.tscn" id="4_3i1rj"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wyrel")
script = ExtResource("1_wld51")

[node name="Background" parent="." instance=ExtResource("3_4xhbq")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 450

[node name="AnimatedButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer" instance=ExtResource("4_3i1rj")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
label_name = "Back"

[node name="LineEdit" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=50.0 freq=3.0 connected=1][center]Choose one[/center][/wave]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Equipment" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_3i1rj")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
label_name = "Equipment"

[node name="Gold" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_3i1rj")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
label_name = "Gold"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
placeholder_text = "Equipment"
editable = false
context_menu_enabled = false
selecting_enabled = false
wrap_mode = 1

[node name="Next" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_3i1rj")]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color_theme = "Primary"
label_name = "Next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer/AnimatedButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Gold" to="." method="_on_gold_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Next" to="." method="_on_next_pressed"]
